Fix focus style alignment with field options

--- a/src/components/field-options/_field-options.scss
+++ b/src/components/field-options/_field-options.scss
@@ -440,6 +440,8 @@
   .data.field-options {
     border: solid 1px transparent;
     display: inline-block;
+    height: auto;
+    line-height: 2rem;
     margin-left: -5px;
     max-width: 100%;
     outline: 0;
